--- a/com.weiglewilczek.coop.client/build.properties
+++ b/com.weiglewilczek.coop.client/build.properties
@@ -2,4 +2,9 @@ source.. = src/
 output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
-               .
+               .,\
+               bin/,\
+               coop.product,\
+               icons/,\
+               lib/,\
+               .scala_dependencies
