--- a/com.weiglewilczek.coop.client.build.tools/build.xml
+++ b/com.weiglewilczek.coop.client.build.tools/build.xml
@@ -6,7 +6,7 @@
 
      blank@weiglewilczek.com
      ====================================================================== -->
-<project name="xwt.launcher.client.releng" default="package.releng.results" basedir=".">
+<project name="rcc.client.releng" default="package.releng.results" basedir=".">
 
 	<property file="properties/build.properties" />
 	<property file="properties/users/${user.name}.properties" />
@@ -27,7 +27,7 @@
 
 		<buildnumber file="${version.config.dir}/${client.buildnum.file}" />
 
-		<propertyfile comment="EclipseLauncherX Build Version Information" file="${version.config.dir}/${xwt.launcher.build.version.file}">
+		<propertyfile comment="RCC Build Version Information" file="${version.config.dir}/${coop.client.build.version.file}">
 			<entry key="build.version" value="${major.version}.${minor.version}.${service.segment}" />
 			<entry key="release.candidate" value="${release.candidate}" />
 			<entry key="client.build.date" type="date" pattern="dd.MM.yyyy" value="now" />
@@ -39,14 +39,14 @@
 			<entry key="client.build.number" value="${build.number}" />
 		</propertyfile>
 
-		<copy todir="${workspace}/com.weiglewilczek.xwt.launcher/src" overwrite="true">
+		<copy todir="${workspace}/com.weiglewilczek.coop.clientr/src" overwrite="true">
 			<fileset dir="${version.config.dir}">
-				<include name="${xwt.launcher.build.version.file}" />
+				<include name="${coop.client.build.version.file}" />
 			</fileset>
 		</copy>
-		<copy todir="${workspace}/com.weiglewilczek.xwt.launcher/bin" overwrite="true">
+		<copy todir="${workspace}/com.weiglewilczek.coop.client/bin" overwrite="true">
 			<fileset dir="${version.config.dir}">
-				<include name="${xwt.launcher.build.version.file}" />
+				<include name="${coop.client.build.version.file}" />
 			</fileset>
 		</copy>
 	</target>
@@ -57,16 +57,16 @@
 	<target name="run.releng.build" depends="update.build.version" description="Runs the PDE releng build.">
 		<echo>RUN.RELENG.BUILD</echo>
 
-		<copy todir="${workspace}/com.weiglewilczek.xwt.launcher/etc.temp" overwrite="true">
-			<fileset dir="${workspace}/com.weiglewilczek.xwt.launcher">
+		<copy todir="${workspace}/com.weiglewilczek.coop.client/etc.temp" overwrite="true">
+			<fileset dir="${workspace}/com.weiglewilczek.coop.client">
 				<include name="plugin.xml" />
 			</fileset>
 		</copy>
 
-		<property file="${version.config.dir}/${xwt.launcher.build.version.file}" />
+		<property file="${version.config.dir}/${coop.client.build.version.file}" />
 
-		<copy todir="${workspace}/com.weiglewilczek.xwt.launcher" overwrite="true">
-			<fileset dir="${workspace}/com.weiglewilczek.xwt.launcher/etc.temp">
+		<copy todir="${workspace}/com.weiglewilczek.coop.client" overwrite="true">
+			<fileset dir="${workspace}/com.weiglewilczek.coop.client/etc.temp">
 				<include name="plugin.xml" />
 			</fileset>
 			<filterset>
@@ -126,12 +126,12 @@
 			</fileset>
 		</copy>
 
-		<copy todir="${workspace}/com.weiglewilczek.xwt.launcher" overwrite="true">
-			<fileset dir="${workspace}/com.weiglewilczek.xwt.launcher/etc.temp">
+		<copy todir="${workspace}/com.weiglewilczek.coop.client" overwrite="true">
+			<fileset dir="${workspace}/com.weiglewilczek.coop.client/etc.temp">
 				<include name="plugin.xml" />
 			</fileset>
 		</copy>
-		<delete dir="${workspace}/com.weiglewilczek.xwt.launcher/etc.temp" />
+		<delete dir="${workspace}/com.weiglewilczek.coop.client/etc.temp" />
 	</target>
 
 	<!-- =================================
@@ -157,41 +157,20 @@
 		<delete dir="${build.dir}" failonerror="false"/>
 		
 		<delete failonerror="false">
-			<fileset dir="${workspace}/com.weiglewilczek.xwt.launcher">
+			<fileset dir="${workspace}/com.weiglewilczek.coop.client">
 			    <include name="*.jar"/>
 			</fileset>
 		</delete>
-		<delete dir="${workspace}/com.weiglewilczek.xwt.launcher/@dot" />
+		<delete dir="${workspace}/com.weiglewilczek.coop.client/@dot" />
 		
 		<delete failonerror="false">
-			<fileset dir="${workspace}/com.weiglewilczek.utils">
-			    <include name="*.jar"/>
-			</fileset>
-		</delete>
-		<delete dir="${workspace}/com.weiglewilczek.utils/@dot" />
-		
-		<delete failonerror="false">
-			<fileset dir="${workspace}/com.weiglewilczek.eclipse.utils.ui">
-			    <include name="*.jar"/>
-			</fileset>
-		</delete>
-		<delete dir="${workspace}/com.weiglewilczek.eclipse.utils.ui/@dot" />
-		
-		<delete failonerror="false">
-			<fileset dir="${workspace}/com.weiglewilczek.eclipse.utils.ui.carbon">
-			    <include name="*.jar"/>
-			</fileset>
-		</delete>
-		<delete dir="${workspace}/com.weiglewilczek.eclipse.utils.ui.carbon/@dot" />
-		
-		<delete failonerror="false">
-			<fileset dir="${workspace}/com.weiglewilczek.xwt.launcher.feature">
+			<fileset dir="${workspace}/com.weiglewilczek.coop.client.feature">
 			    <include name="*.jar"/>
 			</fileset>
 		</delete>
 		
 		<delete failonerror="false">
-			<fileset dir="${workspace}/com.weiglewilczek.xwt.launcher.eclipse.feature">
+			<fileset dir="${workspace}/com.weiglewilczek.coop.client.eclipse.feature">
 			    <include name="*.jar"/>
 			</fileset>
 		</delete>
