--- a/com.weiglewilczek.coop.client/plugin.xml
+++ b/com.weiglewilczek.coop.client/plugin.xml
@@ -41,5 +41,34 @@
          </property>
       </product>
    </extension>
+   <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            class="com.weiglewilczek.coop.client.ui.preferences.OpenPreferences"
+            commandId="com.weiglewilczek.coop.client.ui.commands.preferences">
+      </handler>
+   </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            locationURI="toolbar:org.eclipse.ui.main.toolbar">
+         <toolbar
+               id="com.weiglewilczek.coop.client.ui.maintoolbar">
+            <command
+                  commandId="com.weiglewilczek.coop.client.ui.commands.preferences"
+                  icon="icons/preferences.gif"
+                  style="push"
+                  tooltip="Open Preferences">
+            </command>
+         </toolbar>
+      </menuContribution>
+   </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <command
+            id="com.weiglewilczek.coop.client.ui.commands.preferences"
+            name="OpenPreferences">
+      </command>
+   </extension>
 
 </plugin>
